--- a/index.html
+++ b/index.html
@@ -16,85 +16,84 @@
       <img src="images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a class="header__subtitle-link">Узнать &#8594;</a></p>
+        жизни? <a href="" class="header__link">Узнать &#8594;</a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <!-- 2 колонки -->
       <section class="description">
-        <div class="description__two-columns">
-          <h2 class="description__two-columns_brief">Главные проблемы в обучении</h2>
-          <div class="description__two-columns_main-text">
-            <p class="description__two-columns_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как
               правильно
               изучать материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               даёт нам реального знания. Зубрёжка быстро выветривается и не приносит пользы. </p>
-            <p class="description_main-text_paragraph"><span class="description__two-columns_span-accent">Вывод:</span>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме. </p>
           </div>
         </div>
       </section>
       <section class="digits">
         <!-- светлая таблица -->
-        <h2 class="digits-title">Цифры и факты</h2>
-        <h3 class="digits-subtitle">Про учёбу и мозг</h3>
-        <ul class="table table-light">
-          <li class="table__cell table__cell_theme_light">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__cell_text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">86 миллиардов</h3>
-              <p class="table__cell_text table__cell_text_light">Число нейронов в мозге человека</p>
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__cell_text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__cell_text"> Всемирный Банк, 2017</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">2.1 миллиарда</h3>
-              <p class="table__cell_text table__cell_text_light">Число нуждающихся в повышении квалификации</p>
-              <p class="table__cell_text table__cell_text_light"> Всемирный Банк, 2017</p>
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__cell_text">Объём памяти человека</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">1000 терабайт</h3>
-              <p class="table__cell_text table__cell_text_light">Объём памяти человека</p>
-            </div>
-          </li>
-          <li class="table__cell table__cell_theme_light">
-            <div>
-              <h3 class="table__heading table__heading_light">500 триллионов</h3>
-              <p class="table__cell_text table__cell_text_light">Число ответственных за обучение нервных синапсов у
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__cell_text">Число ответственных за обучение нервных синапсов у
                 взрослого человека
               </p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">420 миллионов</h3>
-              <p class="table__cell_text table__cell_text_light">Число взрослых людей моложе 25 лет,не имеющих
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__cell_text">Число взрослых людей моложе 25 лет,не имеющих
                 образования для
                 трудоустройства.</p>
-              <p class="table__cell_text table__cell_text_light"> Всемирный Банк, 2017</p>
+              <p class="table__cell_text"> Всемирный Банк, 2017</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">17–20 лет</h3>
-              <p class="table__cell_text table__cell_text_light">Пик обучаемости</p>
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__cell_text">Пик обучаемости</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">1885 год</h3>
-              <p class="table__cell_text table__cell_text_light">Открытие кривой забывания</p>
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__cell_text">Открытие кривой забывания</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme_light">
+          <li class="table__cell">
             <div>
-              <h3 class="table__heading table__heading_light">1889 год</h3>
-              <p class="table__cell_text table__cell_text_light">Открытие условного рефлекса</p>
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__cell_text">Открытие условного рефлекса</p>
             </div>
           </li>
         </ul>
@@ -102,75 +101,73 @@
       <section class="feynman">
         <!-- Треугольник -->
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <img class="feynman__main-illustration" src="images/feynman.png" alt="Фейнман">
-        <h3 class="feynman__link">Подробнее &#8594;</h3>
+        <a href="" class="feynman__link">Подробнее &#8594;</a>
       </section>
       <section class="kaufman">
         <!-- тёмная таблица -->
-        <h2 class="kaufman-title">Принципы обучения</h2>
-        <h3 class="kaufman-subtitle">от Джоша Кауфмана</h3>
-        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="треугольник">
-        <ul class="table table_theme-dark">
-          <li class="table__cell table__cell_theme-dark">
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="kaufman__triangle"></div>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__cell_text table__cell_text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">1</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Выберите привлекательный проект.</p>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">2</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Определите целевой уровень мастерства.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">3</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Определите целевой уровень мастерства.</p>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Разбейте навык на элементы.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">4</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Разбейте навык на элементы.</p>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">5</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Приготовьте всё необходимое для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Устраните препятствия для занятий.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">6</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Устраните препятствия для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Выделите специальное время для занятий.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">7</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Выделите специальное время для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">8</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Создайте быстрые петли обратной связи.</p>
-            </div>
-          </li>
-          <li class="table__cell table__cell_theme-dark">
-            <div>
-              <h3 class="table__heading table__heading_theme-dark">9</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Занимайтесь по расписанию, короткими интенсивными
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
                 интервалами.</p>
             </div>
           </li>
-          <li class="table__cell table__cell_theme-dark">
+          <li class="table__cell table__cell_theme_dark">
             <div>
-              <h3 class="table__heading table__heading_theme-dark">10</h3>
-              <p class="table__cell_text table__cell_text_theme-dark">Уделяйте внимание количеству и скорости.</p>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__cell_text table__cell_text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </li>
         </ul>
@@ -179,28 +176,41 @@
     <footer class="footer">
       <!--Подвал-->
       <div class="footer__columns">
-        <div class="footer__columns_content-copyright">
-          <img class="logo logo_place_footer" alt="ЛОготип" src="./images/logo_place_footer.svg">
+        <div class="footer__column_content_copyright">
+          <img class="logo logo_place_footer" alt="Логотип" src="./images/logo_place_footer.svg">
           <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
-        <div class="footer__columns_content_info">
+        <nav class="footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__column-links footer__column-link">
-            <a>Главная</a>
-            <a>Концепция</a>
-            <a>Наставники</a>
-          </div>
-        </div>
-        <div class="footer__columns_content_social">
+          <ul class="footer__column-links">
+            <li>
+              <a href="" class="footer__column-link">Главная</a>
+            </li>
+            <li>
+              <a href="" class="footer__column-link">Концепция</a>
+            </li>
+            <li>
+              <a href="" class="footer__column-link">Наставники</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a><img src="./images/facebook_color_white.svg" class="footer__social-icon" lang="en"
-                alt="Facebook">Facebook</a>
-            <a><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВКонтакте">ВКонтакте</a>
-            <a><img src="./images/instagram_color_white.svg" class="footer__social-icon" lang="en"
-                alt="Instagram">Instagram</a>
-          </div>
-        </div>
+          <ul class="footer__column-links">
+            <li>
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" lang="en" alt="Facebook">
+              <a href="" class="footer__column-link">Facebook</a>
+            </li>
+            <li>
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
+              <a href="" class="footer__column-link">ВКонтакте</a>
+            </li>
+            <li>
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" lang="en" alt="Instagram">
+              <a href="" class="footer__column-link">Instagram</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
