--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
     <header class="header">
       <!--Header-->
-      <img src="images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+      <img src="images\logo\logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="" class="header__link">Узнать &#8594;</a></p>
@@ -21,6 +21,7 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
+
       <!-- 2 колонки -->
       <section class="description">
         <div class="two-columns">
@@ -38,6 +39,76 @@
               захватывающим. Эти же техники применяются на примере обучения в Практикуме. </p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <!--techniques-->
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="images\cards-attention.png" alt="Виды внимания">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images\cards-recall.png" alt="Вспомнить">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images\cards-interliving.png" alt="Интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images\cards-question.png" alt="Вопросы">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images\cards-competence.png" alt="Иллюзия компетентности">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <!--video-->
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <!--Оакли-->
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <!-- Треугольник -->
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <img class="feynman__main-illustration" src="images/feynman.png" alt="Фейнман">
+        <a href="" class="feynman__link">Подробнее &#8594;</a>
       </section>
       <section class="digits">
         <!-- светлая таблица -->
@@ -84,12 +155,22 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <!-- Треугольник -->
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <img class="feynman__main-illustration" src="images/feynman.png" alt="Фейнман">
-        <a href="" class="feynman__link">Подробнее &#8594;</a>
+      <section class="khan">
+        <!--Khan-->
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир
+            — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и
+            знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images\khan-book.jpg" alt="Обложка книги">
+            <a href="" class="khan__buy-link">Купить книгу &#8594;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <!-- тёмная таблица -->
@@ -140,12 +221,22 @@
           </li>
         </ul>
       </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img class="resources__logo" src="images\logo\resources-arzamas.svg" alt="Арзамас">
+          <img class="resources__logo" src="images\logo\resources-n1.svg" alt="Н1">
+          <img class="resources__logo" src="images\logo\resources-strelka.svg" alt="Стрелка">
+          <img class="resources__logo" src="images\logo\resources-polka.svg" alt="Полка">
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <!--Подвал-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" alt="Логотип" src="./images/logo_place_footer.svg">
+          <img class="logo logo_place_footer" alt="Логотип" src="images\logo\logo_place_footer.svg">
           <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -167,15 +258,15 @@
           <ul class="footer__column-links">
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="./images/facebook_color_white.svg" lang="en" alt="Facebook">Facebook</a>
+                  src="images\icon\facebook_color_white.svg" lang="en" alt="Facebook">Facebook</a>
             </li>
             <li>
-              <a href="" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg"
+              <a href="" class="footer__column-link"><img class="footer__social-icon" src="images\icon\vk_color_white.svg"
                   alt="ВКонтакте">ВКонтакте</a>
             </li>
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="./images/instagram_color_white.svg" lang="en" alt="Instagram">Instagram</a>
+                  src="images\icon\instagram_color_white.svg" lang="en" alt="Instagram">Instagram</a>
             </li>
           </ul>
         </nav>
