--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="vendor/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -82,11 +80,11 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player" frameborder="0"
+            title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
           <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player" frameborder="0"
+            title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
@@ -168,7 +166,9 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги">
+            <div class="khan__book-pic">
+              <img src="images/khan-book.jpg" alt="Обложка книги">
+            </div>
             <a href="" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
@@ -177,7 +177,7 @@
         <!-- тёмная таблица -->
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="kaufman__triangle rotation"></div>
+        <img class="kaufman__triangle rotation" src="images/kaufman-triangle.svg" alt="Треугольник">
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -262,8 +262,8 @@
                   src="images/icon/facebook_color_white.svg" lang="en" alt="Facebook">Facebook</a>
             </li>
             <li>
-              <a href="" class="footer__column-link"><img class="footer__social-icon" src="images/icon/vk_color_white.svg"
-                  alt="ВКонтакте">ВКонтакте</a>
+              <a href="" class="footer__column-link"><img class="footer__social-icon"
+                  src="images/icon/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
             </li>
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
