--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
-
       <!-- 2 колонки -->
       <section class="description">
         <div class="two-columns">
@@ -76,7 +75,7 @@
       </section>
       <section class="video">
         <!--video-->
-        <h2 class="section-title section__title_place_video">Видео нa TED</h2>
+        <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY"
