--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
         <!-- тёмная таблица -->
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <img class="kaufman__triangle rotation" src="images/kaufman-triangle.svg" alt="Треугольник">
+        <div class="kaufman__triangle rotation">
+        </div>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -225,10 +226,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас">
-          <img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1">
-          <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка">
-          <img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка">
+          <a href=""><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
+          <a href=""><img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1"></a>
+          <a href=""><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a>
+          <a href=""><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a>
         </div>
       </section>
     </main>
