--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
       <!-- 2 колонки -->
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как
@@ -36,7 +36,7 @@
               сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме. </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="techniques">
         <!--techniques-->
@@ -77,20 +77,21 @@
         <!--video-->
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
+        <ul class="video__iframes">
+          <li><iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </li>
+          <li>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </li>
+        </ul>
       </section>
       <section class="oakley">
         <!--Оакли-->
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
@@ -99,7 +100,7 @@
               тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
               добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="feynman">
         <!-- Треугольник -->
@@ -223,12 +224,20 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a href=""><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
-          <a href=""><img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1"></a>
-          <a href=""><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a>
-          <a href=""><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li>
+            <a href=""><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
+          </li>
+          <li>
+            <a href=""><img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1"></a>
+          </li>
+          <li>
+            <a href=""><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a>
+          </li>
+          <li>
+            <a href=""><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
